# icx-proxy

./: .gitignore  Cargo.toml  README.md  test.sh
.github/: CODEOWNERS
.github/workflows/: fmt.yml  lint.yml  release.yml  test.yml
src/: canister_id.rs  headers.rs  http_client.rs  http_transport.rs  logging.rs  main.rs  metrics.rs  proxy.rs  validate.rs
src/config/: dns_canister_config.rs  dns_canister_rule.rs
src/proxy/: agent.rs  forward.rs  mod.rs
